--- a/dz1.html
+++ b/dz1.html
@@ -11,19 +11,18 @@
 <body>
     <form action="" target="_blank">
         <h1>Вакансия: Junior Frontend Developer</h1>
-        <p><img src="http://memesmix.net/media/created/ig02b4.jpg" style="float:left"
-                width="144" height="144">
+        <p><img src="http://memesmix.net/media/created/ig02b4.jpg" style="float:left" width="144" height="144">
             <span>Имя: Аделя</span>
             <br>
             <a href="https://github.com/adelieri " target="_blank">Ссылка на репозиторий в GitHub</a> </a>
             <br>
             <span>Опыт работы: нет</span></p><br><br><br><br>
-        <p>Дата собеседования <input type="date" name="Дата собеседования"></p>
+        <p>Дата собеседования <input type="date" name="data"></p>
         <p>Уровень английского</p>
-        <input type="radio" name="gender" value="Плохо"> Плохо
-        <input type="radio" name="gender" value="Средне"> Средне
-        <input type="radio" name="gender" value="Хорошо"> Хорошо
-        <input type="radio" name="gender" value="Превосходно"> Превосходно
+        <input type="radio" name="grade" id="grade1"><label for="grade1">Плохо</label>
+        <input type="radio" name="grade" id="grade2"><label for="grade2">Средне</label>
+        <input type="radio" name="grade" id="grade3"><label for="grade3">Хорошо</label>
+        <input type="radio" name="grade" id="grade4"><label for="grade4">Превосходно</label>
         <br>
         <p>Ключевые навыки:</p>
         <ul>
@@ -31,8 +30,8 @@
             <li>CSS/LESS</li>
             <li>JavaScript</li>
             <li>...</li>
-            <li><input type="text" name="navyk" value="введите навык...">
-                <input type="submit" value="Добавить в список"></li>
+            <input type="text" name="navyk" placeholder="Введите навык...">
+            <input type="submit" value="Добавить в список">
         </ul>
         <p>Коммуникабельность:
             <select name="" id="">
@@ -40,12 +39,12 @@
                 <option value="Отвечает на вопросы">Отвечает на вопросы</option>
                 <option value="Задает много вопросов">Задает много вопросов</option>
             </select></p>
-        <p>Желаемая з/п: <input type="text" name="zarplata" min=1000 max="200000"></p>
+        <p>Желаемая з/п: <input type="number" name="zarplata" min=1000 max="200000"></p>
         <p>Подходит по критериям:</p>
-        <input type="checkbox" name="kriteriy" value="">Знание английского
-        <input type="checkbox" name="kriteriy" value="">Оклад
-        <input type="checkbox" name="kriteriy" value="">Навыки
-        <input type="checkbox" name="kriteriy" value="">Сразу видно, свой человек
+        <input type="checkbox" name="kriteriy" id="check1"><label for="check1">Знание английского</label>
+        <input type="checkbox" name="kriteriy" id="check2"><label for="">Оклад</label>
+        <input type="checkbox" name="kriteriy" id="check3"><label for="">Навыки</label>
+        <input type="checkbox" name="kriteriy" id="check4"><label for="">Сразу видно, свой человек</label>
         <p>Образование, курсы и т.п.
             <table border="1">
                 <thead>
@@ -54,6 +53,8 @@
                         <th>Сроки обучения</th>
                         <th>Наименование учебного заведения</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td>1</td>
                         <td>UX</td>
@@ -69,12 +70,11 @@
                         <td>Frontend</td>
                         <td>LevelUP</td>
                     </tr>
-                </thead>
-                <tbody></tbody>
+                </tbody>
             </table>
         </p>
         <br>
-        <input type="submit" value="Отправить" target="_blank">
+        <input type="button" value="Отправить">
     </form>
 </body>
 
