--- a/dz3.html
+++ b/dz3.html
@@ -10,31 +10,83 @@
 </head>
 
 <body>
-    <div><h4>Discussion topic: What about Bill?</h4>
-    <span>Created by: Your_name</span>
-    <span>Created on: Some_date</span></div>
+    <header>
+        <h4>Discussion topic: What about Bill?</h4>
+        <span>Created by: Your_name</span>
+        <span>Created on: Some_date</span>
+    </header>
     <div class="main-container">
-        <div class="row">
-            <div class="small-container">
-                <div class="circle">AE</div>
-                <span>17.05.2017</span><br>
-                <span>19:26:18</span> <br>
-                <div class="circle">EG</div>
-                <span>27.04.2017</span><br>
-                <span>02:24:39</span> <br>
-                <div class="circle">PM</div>
-                <span>27.04.2017</span><br>
-                <span>02:23:13</span> <br>
-                <div class="circle">AE</div>
-                <span>27.04.2017</span><br>
-                <span>02:21:55</span>
-            </div> <br>
-            <div class="small-container right1">
-                <span>Anton Efremenkov</span> <br>
-                <span>Edvard Gorky</span> <br>
-                <span>Pavel Moroz</span> <br>
-                <span>Anton Efremenkov</span>
-            </div>
+        <div class="circle">AE</div>
+        <div class="message">
+            <span>17.05.2017</span><br>
+            <span>19:26:18</span> <br>
+            <span class="right">Anton Efremenkov</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">EG</div>
+        <div class="message">
+            <span>27.04.2017</span><br>
+            <span>02:24:39</span> <br>
+            <span class="right">Edvard Gorky</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">PM</div>
+        <div class="message">
+            <span>27.04.2017</span><br>
+            <span>02:23:13</span> <br>
+            <span class="right">Pavel Moroz</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">AE</div>
+        <div class="message">
+            <span>27.04.2017</span><br>
+            <span>02:21:55</span>
+            <span class="right">Anton Efremenkov</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">PM</div>
+        <div class="message">
+            <span>25.04.2017</span><br>
+            <span>01:23:13</span> <br>
+            <span class="right">Pavel Moroz</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">AE</div>
+        <div class="message">
+            <span>17.04.2017</span><br>
+            <span>19:26:18</span> <br>
+            <span class="right">Anton Efremenkov</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">EG</div>
+        <div class="message">
+            <span>16.04.2017</span><br>
+            <span>02:24:39</span> <br>
+            <span class="right">Edvard Gorky</span> <br>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
+        </div>
+        <div class="circle">PM</div>
+        <div class="message">
+            <span>15.04.2017</span><br>
+            <span>12:23:13</span> <br>
+            <span class="right">Pavel Moroz</span> <br>
+            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
+                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
+                eligendi in dolor praesentium nulla?</p>
         </div>
     </div>
 </body>
