--- a/dz3.html
+++ b/dz3.html
@@ -1,94 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="dz3.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="dz3.css">
 </head>
-
 <body>
-    <header>
-        <h4>Discussion topic: What about Bill?</h4>
-        <span>Created by: Your_name</span>
-        <span>Created on: Some_date</span>
-    </header>
-    <div class="main-container">
-        <div class="circle">AE</div>
-        <div class="message">
-            <span>17.05.2017</span><br>
-            <span>19:26:18</span> <br>
-            <span class="right">Anton Efremenkov</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">EG</div>
-        <div class="message">
-            <span>27.04.2017</span><br>
-            <span>02:24:39</span> <br>
-            <span class="right">Edvard Gorky</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">PM</div>
-        <div class="message">
-            <span>27.04.2017</span><br>
-            <span>02:23:13</span> <br>
-            <span class="right">Pavel Moroz</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">AE</div>
-        <div class="message">
-            <span>27.04.2017</span><br>
-            <span>02:21:55</span>
-            <span class="right">Anton Efremenkov</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">PM</div>
-        <div class="message">
-            <span>25.04.2017</span><br>
-            <span>01:23:13</span> <br>
-            <span class="right">Pavel Moroz</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">AE</div>
-        <div class="message">
-            <span>17.04.2017</span><br>
-            <span>19:26:18</span> <br>
-            <span class="right">Anton Efremenkov</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">EG</div>
-        <div class="message">
-            <span>16.04.2017</span><br>
-            <span>02:24:39</span> <br>
-            <span class="right">Edvard Gorky</span> <br>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
-        <div class="circle">PM</div>
-        <div class="message">
-            <span>15.04.2017</span><br>
-            <span>12:23:13</span> <br>
-            <span class="right">Pavel Moroz</span> <br>
-            <p class="right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis delectus maiores, facere
-                laboriosam quod, odio sapiente ducimus adipisci quae, placeat nisi ratione ut obcaecati. Magni
-                eligendi in dolor praesentium nulla?</p>
-        </div>
+  <header>
+    <h3>Discussion topic: What about Bill?</h3>
+    <span class="name">Created by: Your_name</span>
+    <span class="name">Created on: Some_date</span>
+  </header>
+  <div class="main-container">
+    <div class="message">
+      <div class="circle">AE</div>
+        <span class="circle-txt">17.05.2017<br>19:26:18</span>
+      <div class="right">
+          <span class="name">Anton Efremenkov</span><br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
     </div>
+    <div class="message">
+      <div class="circle">EG</div>
+        <span class="circle-txt">27.04.2017<br>02:24:39</span>
+      <div class="right">
+        <span class="name">Edvard Gorky</span><br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <div class="message">
+      <div><div class="circle">PM</div></div>
+        <span class="circle-txt">27.04.2017<br>02:23:13</span>
+      <div class="right">
+        <span class="name">Pavel Moroz</span><br>
+        <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, itaque? Libero enim incidunt qui quidem! Ex maiores libero tenetur eaque. Earum ullam distinctio aspernatur dolores, commodi blanditiis vero quis enim!</p>
+      </div>
+    </div>
+    <div class="message">
+      <div class="circle">AE</div>
+        <span class="circle-txt">27.04.2017 <br>02:21:55</span>
+      <div class="right">
+        <span class="name">Anton Efremenkov</span> <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <div class="message">
+        <div class="circle">AE</div>
+          <span class="circle-txt">17.05.2016<br>19:26:18</span>
+        <div class="right">
+            <span class="name">Anton Efremenkov</span><br>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="message">
+        <div class="circle">EG</div>
+          <span class="circle-txt">27.04.2016<br>02:24:39</span>
+        <div class="right">
+            <span class="name">Edvard Gorky</span> <br>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="message">
+        <div class="circle">PM</div>
+          <span class="circle-txt">27.04.2016<br>02:23:13</span>
+        <div class="right">
+            <span class="name">Pavel Moroz</span><br>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="message">
+        <div class="circle">AE</div>
+          <span class="circle-txt">27.04.2016<br>02:21:55</span>
+        <div class="right">
+            <span class="name">Anton Efremenkov</span><br>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+  </div>
+
 </body>
 
 </html>
